Version 1.2.5
-------------
- added an option to display only icons in social login widget (HOAuth::onlyIcons)

Version 1.2.4
------------
- updated hybridauth lib
- support of older version of yii-user
- moved to MIT license

Version 1.2.3
-----------
- yii-user: we display `username` field only if it is required by the `User` model, so you can disable `username` field in `yii-user`.
- fixed bug when after saving profileCache returned in serialized form
- removed some NOTICE erros and fixed one stupid big with email sending callback (thanks to Komannder)
- fixed bug with imposibility of login with twitter (and other similar SN) despite successful email activation
- added two callbacks: hoauthCheckAccess() and hoauthAfterLogin(). Details at https://github.com/SleepWalker/hoauth/wiki/Callbacks.
- added Spanish, German and Russian translations (thanks to Komannder and me)
- Security improvement: if user try to login with email of existing local account, that is not bond to current social network, he will be asked for password to confirm binding.
- added support of validatePassword() callback - alias for verifyPassword()
- added widget HOAuthActive - display login buttons of social networks bond to current user (Charles)

Version 1.2.2
-------------
- Enh#6: support of prefixed table names
- Enh#7: added ability to setup alias (by default is application.config.hoauth) of HybridAuth config file in yii config (Yii::app()->params['hoauth']['configAlias'])
- Enh#8: widget to display social networks that user bond to
- Support of `yii-user` version, when Profile::regMode isn't static property
- Fixed issue when password field apeared, when it should not do so during social network signup
- Support of sending activation email by `yii-user` module
- Added support of `yii-user` banned and not activated account status
- Ability to register a new account with the same SN, when in db still exists SN relation to account that was deleted